--- a/firebase.json
+++ b/firebase.json
@@ -4,16 +4,16 @@
     "indexes": "firestore.indexes.json"
   },
   "functions": {
-    "predeploy": [
-      "npm --prefix \"$RESOURCE_DIR\" run lint"
-    ]
+    "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run lint"]
   },
   "hosting": {
     "public": "public",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "rewrites": [
+      {
+        "source": "**",
+        "function": "nuxtssr"
+      }
     ]
   },
   "storage": {
@@ -21,13 +21,13 @@
   },
   "emulators": {
     "functions": {
-      "port": 5001
+      "port": 9001
     },
     "firestore": {
-      "port": 8080
+      "port": 9080
     },
     "hosting": {
-      "port": 5000
+      "port": 9000
     }
   }
 }
