finish yandex metrica setup

--- a/functions/package.json
+++ b/functions/package.json
@@ -8,7 +8,8 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "firebase-build-ssr": "npm run build-nuxt-from-functions-dir && npm run copy-nuxt-to-functions && npm run copy-nuxt-to-public",
+    "firebase-ssr-build": "npm run build-nuxt-from-functions-dir && npm run copy-nuxt-to-functions && npm run copy-nuxt-to-public",
+    "firebase-ssr-deploy": "npm run firebase-ssr-build && firebase deploy",
     "build-nuxt-from-functions-dir": "npm --prefix ../src run build",
     "copy-nuxt-to-functions": "rm -rf .nuxt && cp -R ../src/.nuxt .nuxt",
     "copy-nuxt-to-public": "npm run clean-public && npm run copy-nuxt-assets-static-to-public && npm run copy-nuxt-dist-to-public ",
@@ -25,6 +26,7 @@
     "@nuxtjs/dotenv": "^1.4.0",
     "@nuxtjs/pwa": "^3.0.0-0",
     "@nuxtjs/recaptcha": "^0.6.2",
+    "@nuxtjs/yandex-metrika": "^1.0.3",
     "express": "^4.17.1",
     "firebase": "^7.6.2",
     "firebase-admin": "^8.6.0",
